gcc/testsuite/rust/rustc/ui/issues/issue-45829/rename-with-path.rs
use std::{collections::HashMap as A, sync::Arc as A};
// { dg-error ".E0252." "" { target *-*-* } .-1 }

fn main() {}

